tree-sitter-souffle/grammar.js
        source_file: ($) => repeat($._element),
        _element: ($) =>
            choice(
                $.directive,
                $.include_directive,
                $.relation_decl,
                $.rule,
                $.fact,
                $.type_decl,
                $.deprecated_type_decl,
                $.functor_decl,
                $.component_decl,
                $.component_init,
                $.preproc_directive,
                $.pragma,
            ),
        preproc_directive: ($) =>
            choice(
                $.preproc_include,
                $.preproc_if,
                $.preproc_elif,
                $.preproc_else,
                $.preproc_ifdef,
                $.preproc_ifndef,
                $.preproc_endif,
                $.preproc_define,
            ),
        preproc_include: ($) =>
            seq("#include", alias($.string_literal, $.path_spec)),
        preproc_else: (_) => "#else",
        preproc_define: ($) => seq("#define", $.preproc_macro),
        preproc_macro: (_) => /\S([^\n]|\\\r?\n)*/,
        relation_decl: ($) =>
            seq(
                $.decl_kw,
                field("name", commaSep1($.identifier)),
                "(",
                optional(commaSep1($.attribute)),
                ")",
                repeat($.relation_qualifier),
                optional($.choice_domain),
            ),
        relation_qualifier: (_) =>
            choice(
                "eqrel",
                "btree",
                "btree_delete",
                "brie",
                "no_magic",
                "magic",
                "no_inline",
                "inline",
                "override",
                "overridable",
                // legacy syntax
                "input",
                "output",
                "printsize",
            ),
        rule: ($) =>
            seq(
                field("head", choice($.rule_head, $.subsumption_head)),
                ":-",
                field("body", $.disjunction),
                ".",
                optional($.query_plan),
            ),
        rule_head: ($) => commaSep1($.atom),
        disjunction: ($) => sep1($.conjunction, ";"),
        conjunction: ($) => commaSep1($.conjunction_clause),
        conjunction_clause: ($) =>
            seq(
                alias(repeat("!"), $.neg),
                choice($.atom, $.constraint, seq("(", $.disjunction, ")")),
            ),
        constraint: ($) =>
            choice(
                $.binary_constraint,
                $.boolean_literal,
                // TODO: match and contains
            ),
        binary_constraint: ($) =>
            seq(
                field("lhs", $.argument),
                field("op", choice("<", ">", "<=", ">=", "=", "!=")),
                field("rhs", $.argument),
            ),
        directive: ($) =>
            seq(
                $.directive_qualifier,
                commaSep1($.qualified_name),
                optional(
                    seq(
                        "(",
                        optional(commaSep1($.directive_attribute_assignment)),
                        ")",
                    ),
                ),
            ),
        directive_qualifier: ($) =>
            choice($.input_kw, $.output_kw, $.printsize_kw, $.limitsize_kw),
        directive_attribute_assignment: ($) =>
            seq(
                field("directive_attribute", $.identifier),
                "=",
                field("directive_value", $.directive_value),
            ),
        directive_value: ($) =>
            choice(
                $.string_literal,
                $.identifier,
                $.boolean_literal,
                $._number,
            ),
        qualified_name: ($) => sep1($.identifier, "."),
        argument: ($) =>
            choice(
                $.constant,
                $.variable,
                alias("nil", $.nil),
                $.record_init,
                $.branch_init,
                $.unary_operation,
                $.binary_operation,
                $.type_conversion,
                $.aggregator,
                $.range_expression,
                $.functor_invocation,
                $.paren_argument,
            ),
        constant: ($) => choice($.string_literal, $._number),
        variable: ($) => choice($.identifier, "_"),
        unary_operation: ($) =>
            prec(6, seq(alias(choice("-", "bnot", "lnot"), $.op), $.argument)),
        binary_operation: ($) =>
            choice(
                prec.left(
                    5,
                    seq(
                        alias($.argument, $.lhs),
                        alias("^", $.op),
                        alias($.argument, $.rhs),
                    ),
                ),
                prec.left(
                    4,
                    seq(
                        alias($.argument, $.lhs),
                        alias(choice("*", "/", "%"), $.op),
                        alias($.argument, $.rhs),
                    ),
                ),
                prec.left(
                    3,
                    seq(
                        alias($.argument, $.lhs),
                        alias(choice("+", "-"), $.op),
                        alias($.argument, $.rhs),
                    ),
                ),
                prec.left(
                    2,
                    seq(
                        alias($.argument, $.lhs),
                        alias(choice("land", "lor", "lxor"), $.op),
                        alias($.argument, $.rhs),
                    ),
                ),
                prec.left(
                    1,
                    seq(
                        alias($.argument, $.lhs),
                        alias(
                            choice(
                                "band",
                                "bor",
                                "bxor",
                                "bshl",
                                "bshr",
                                "bshru",
                            ),
                            $.op,
                        ),
                        alias($.argument, $.rhs),
                    ),
                ),
            ),
        attribute: ($) =>
            seq(field("name", $.identifier), ":", field("type", $.type_name)),
        fact: ($) => seq($.atom, "."),
        deprecated_type_decl: ($) =>
            seq(choice($.number_type_kw, $.symbol_type_kw), $.type_name),
        type_name: ($) =>
            choice(
                $.primitive_type,
                alias($.qualified_name, $.user_defined_type_name),
            ),
        primitive_type: (_) => choice("number", "symbol", "unsigned", "float"),
        component_decl: ($) =>
            seq(
                $.comp_kw,
                sep1($.component_type, choice(":", ",")),
                "{",
                repeat(
                    choice(
                        $.type_decl,
                        $.relation_decl,
                        $.rule,
                        $.fact,
                        $.directive,
                        $.component_override,
                        $.component_init,
                        $.component_decl,
                    ),
                ),
                "}",
            ),
        component_type: ($) =>
            seq($.identifier, optional(seq("<", commaSep1($.identifier), ">"))),
        component_override: ($) => seq($.override_kw, $.identifier),
        component_init: ($) =>
            seq($.init_kw, $.identifier, "=", $.component_type),
        atom: ($) =>
            seq(
                field("name", $.qualified_name),
                "(",
                field("args", optional(commaSep1($.argument))),
                ")",
            ),
        identifier: (_) => /[\?a-zA-Z_][\?a-zA-Z0-9_]*/,
        decimal: (_) => /[0-9]+/,
        _number: ($) => choice($._integer, $.float),
    },
});

function commaSep1(rule) {
    return sep1(rule, ",");
}

function sep2(rule, separator) {
    return seq(rule, separator, rule, repeat(seq(separator, rule)));
}

function sep1(rule, separator) {
    return seq(rule, repeat(seq(separator, rule)));
}
