tree-sitter-souffle/test/corpus/argument/nil.txt
====================================
nil argument
====================================

f(0, nil).

---

(source_file
  (fact
    (atom
      (qualified_name
        (identifier))
      (argument
        (constant
          (decimal)))
      (argument
        (nil)))))
