tree-sitter-souffle/test/corpus/preproc/define.txt
============================================
preproc define
============================================

#define FOOBAR

--------------------------------------------

(source_file
 (preproc_directive
  (preproc_define
   (preproc_macro))))
