tree-sitter-souffle/test/corpus/preproc/else.txt
=========================================
preprocessor else
=========================================

#else

-----------------------------------------

(source_file
 (preproc_directive
  (preproc_else)))
