tree-sitter-souffle/test/corpus/preproc/include.txt
====================================
preprocessor include
====================================

#include "numbers"

------------------------------------

(source_file
  (preproc_directive
    (preproc_include
      (path_spec))))
